--- a/cluster_setup/uninstall_spark_playbook.yml
+++ b/cluster_setup/uninstall_spark_playbook.yml
@@ -3,6 +3,8 @@
   become: yes
   vars:
     MOUNT_POINT: "/sparkcluster/fileshare"
+  vars_files:
+    - secret.yml    
 
   tasks:
     - name: Stop Spark Worker
